feat: Added authentication to endpoints
