# backend/src/lib/Api.ts
@@ -1,4 +1,4 @@
-import express, { Request, Response } from 'express';
+import express, { Request, Response, NextFunction } from 'express';
 import Database from './Database';
 import swaggerUi from 'swagger-ui-express';
 
@@ -13,25 +13,41 @@ export default class Api {
         this.express = express();
         this.mountRoutes();
 
-        const port = process.env.PORT || 3000;
+        const port = process.env.API_PORT || 3000;
 
         this.express.listen(port, () => {
             console.log(`Server running on port ${port}`);
         });
     }
 
+    private async authenticateToken(req: Request, res: Response, next: NextFunction): Promise<void> {
+        const authHeader = req.headers['authorization'];
+        const token = authHeader && authHeader.split(' ')[1];
+
+        if (token == null) {
+            res.sendStatus(401);
+            return;
+        }
+
+        if (await this.database.verifyToken(token)) {
+            next();
+        } else {
+            res.sendStatus(403); // Forbidden
+        }
+    }
+
     private mountRoutes(): void {
         const router = express.Router();
 
-        router.use('/', swaggerUi.serve, swaggerUi.setup(this.swaggerDocument));
+        router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(this.swaggerDocument));
 
-        router.get('/weather', async (req: Request, res: Response) => {
+        router.get('/weather', this.authenticateToken, async (req: Request, res: Response) => {
             const weatherData = await this.database.getWeatherData();
 
             res.json(weatherData);
         });
 
-        router.post('/weather', async (req: Request, res: Response) => {
+        router.post('/weather', this.authenticateToken, async (req: Request, res: Response) => {
             const { temperature, humidity, timestamp } = req.body;
 
             await this.database.addWeatherData(temperature, humidity, timestamp);
